enforce-hello-world-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: hello-world
spec:
  ingress:
  - {}
  podSelector: {}
  policyTypes:
  - Ingress
