5.3.2_require-namespace-network-policies.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireNamespaceNetworkPolicies
metadata:
  name: cis-k8s-v1.5.1-require-namespace-network-policies
  labels:
    policycontroller.gke.io/bundleName: cis-k8s-v1.5.1
  annotations:
    # This constraint is not certified by CIS.
    policycontroller.gke.io/constraintData: |
      "{
        bundleName: 'cis-k8s-v1.5.1',
        bundleDisplayName: 'CIS Kubernetes Benchmark v1.5.1',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-cis-k8s-benchmark',
        bundleVersion: '202303.0',
        bundleDescription: 'Use the CIS Kubernetes Benchmark 1.5.1 policy bundle with Anthos Policy Controller to evaluate the compliance of your cluster resources against the CIS Kubernetes Benchmark, which is a set of recommendations for configuring Kubernetes to support a robust security posture.',
        controlNumbers: '[5.3.2]',
        severity: 'UNASSIGNED',
        description: 'Requires that every namespace defined in the cluster has a NetworkPolicy.',
        remediation: 'The use of a namespace in the cluster without a NetworkPolicy is restricted. Add a NetworkPolicy to your namespace. See “Network Policies” for more information: https://kubernetes.io/docs/concepts/services-networking/network-policies',
        minimumTemplateLibraryVersion: '1.10.1'
      }"
spec:
  enforcementAction: warn
  match:
    excludedNamespaces:
      - kube-system
      - kube-node-lease
      - kube-public
      - gatekeeper-system
      - config-management-system
      - config-management-monitoring
      - resource-group-system
      - gke-connect
      - istio-system
      - asm-system
      - default
      - capi-system
      - vm-system
      - gke-managed-metrics-server
      - cert-manager
      - anthos-creds
      - capi-kubeadm-bootstrap-system
      - gke-system
      - anthos-identity-service
